instructions.Instructions.scala.error
Erreur de compilation :
Instructions:15: error: identifier expected but '}' found.
	}
        ^